# chat-history-to-fullauto-workflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
.omo/plans/: aggressive-rewrite.md
agents/: openai.yaml
examples/: code-review-workflow.json  data-migration-workflow.json
references/: script_patterns.md
scripts/: prompt_loop_runner.py
src/chwflow/: __init__.py  __main__.py  cli.py  engine.py  models.py  prompts.py  render.py  state.py
src/chwflow/adapters/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py
src/chwflow/controllers/: __init__.py  automation.py  generator.py  hybrid.py  prompt_loop.py
src/chwflow/templates/: shell_script.sh.tmpl
tests/: conftest.py  test_adapters.py  test_cli.py  test_controllers.py  test_engine.py  test_models.py  test_prompts.py  test_state.py
