[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chwflow"
version = "0.2.0"
description = "Turn chat history into executable self-reviewing workflow scripts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "tinelee123" }]
keywords = ["workflow", "automation", "ai-agents", "prompt-loop", "codex-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
]
dev = [
    "chwflow[llm]",
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.6",
    "basedpyright>=1.17",
]

[project.scripts]
chw = "chwflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chwflow"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W",
    "UP", "B", "C4", "SIM",
    "RUF", "T20",
]
ignore = ["B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--no-header"]
